ios overflow:hidden bug 4

--- a/main.scss
+++ b/main.scss
@@ -174,6 +174,7 @@ $warning: #3edc99;
     border-radius: 100%;
     color: red;
     border: solid 2px;
+    will-change: transform;
   }
   
   .sm-circle {
@@ -185,6 +186,7 @@ $warning: #3edc99;
     border: solid 10px;
     border-radius: 100%;
     z-index: -1000;
+    will-change: transform;
   }
   
   .lg-circle {
@@ -197,6 +199,7 @@ $warning: #3edc99;
     border-radius: 100%;
     overflow: hidden;
     z-index: -100;
+    will-change: transform;
   }
 
   
