--- a/style.css
+++ b/style.css
@@ -10936,6 +10936,7 @@ ul .btn {
   border-radius: 100%;
   color: red;
   border: solid 2px;
+  will-change: transform;
 }
 
 .sm-circle {
@@ -10947,6 +10948,7 @@ ul .btn {
   border: solid 10px;
   border-radius: 100%;
   z-index: -1000;
+  will-change: transform;
 }
 
 .lg-circle {
@@ -10959,6 +10961,7 @@ ul .btn {
   border-radius: 100%;
   overflow: hidden;
   z-index: -100;
+  will-change: transform;
 }
 
 .triangle-down {
